--- a/Contact.html
+++ b/Contact.html
@@ -197,7 +197,7 @@
 
       <div class="footerClass">
         <h1>More</h1>
-        <a href="#app1" onclick="allproducts()">My Products</a>
+        <a href="#">My Products</a>
         <a href="Contact.html">Contact Us</a>
       </div>
 
