--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>WEB222 Store</title>
     <link rel="stylesheet" href="Contact.css" />
+    <script src="https://kit.fontawesome.com/8023ce706a.js" crossorigin="anonymous"></script>
     <script src="Contact.js"></script>
   
   </head>
@@ -204,7 +205,7 @@
       <div class="footerClass">
         <h1>Follow Us</h1>
         <li>
-          <a href="#"><i class="fab fa-facebook-square"></i></a>
+          <a href="#"><i class="fab fa-facebook"></i></a>
         </li>
         <li>
           <a href="#"><i class="fa fa-twitter"></i></a>
