--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>WEB222 Store</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/8023ce706a.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </head>
 
