--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             style="width: 100%; "
           />
           <h1>Apple Watch Series 2 For Ladies</h1>
+          <p>The Second generation of Apple watches with built in GPS and Water Resistance</p>
           <p class="price">CAD $259.99</p>
           <p><button>Add to Cart</button></p>
         </div>
@@ -59,6 +60,7 @@
         <div class="shop" id="app2">
           <img src="images/applewatch_series3.png" alt="Apple watch" style="width: 100%; " />
           <h1>Apple Watch Series 3</h1>
+          <p>The fourth generation of Apple watches with LTE cellular connectivity and an electronic SIM card</p>
           <p class="price">CAD $599.99</p>
           <p><button>Add to Cart</button></p>
         </div>
@@ -66,6 +68,7 @@
         <div class="shop" id="app3">
           <img src="images/applewatch_series3_Ladies.png" alt="Apple watch" style="width: 100%;" />
           <h1>Apple Watch Series 3 for Ladies</h1>
+          <p>The fourth generation of Apple watches with LTE cellular connectivity and an electronic SIM card - Sport Loop Band</p>
           <p class="price">CAD $599.99</p>
           <p><button>Add to Cart</button></p>
         </div>
@@ -73,6 +76,7 @@
         <div class="shop" id="app4">
           <img src="images/applewatch_series3_nike.png" alt="Apple watch" style="width: 100%;" />
           <h1>Apple Watch Series 3 - Nike Band</h1>
+          <p>The fourth generation of Apple watches with LTE cellular connectivity and an electronic SIM card - Nike Platinum Sport Band</p>
           <p class="price">CAD $699.99</p>
           <p><button>Add to Cart</button></p>
         </div>
@@ -84,6 +88,7 @@
             style="width: 100%;"
           />
           <h1>Fitbit Blaze</h1>
+          <p>Fitbit Blaze Gunmetal with built in fitness tracker, PurePulse heart rate tracker and GPS</p>
           <p class="price">CAD $349.99</p>
           <p><button>Add to Cart</button></p>
         </div>
@@ -91,13 +96,15 @@
         <div class="shop" id="fit2">
           <img src="images/Fitbit_versa_GoldRose.png" alt="Fitbit watch" style="width: 100%;" />
           <h1>Fitbit Versa - Gold Rose</h1>
-          <p class="price">CAD $399.99</p>
+          <p>2nd version of Fitbit Versa model with sleep tracking, Heart rate tracking and Amazon Alexa</p>
+          <p class="price">CAD $459.99</p>
           <p><button>Add to Cart</button></p>
         </div>
 
         <div class="shop" id="fit3">
           <img src="images/fitbit-versa-light-pink.png" alt="Fitbit watch" style="width: 100%;" />
           <h1>Fitbit Versa Pink - Ladies</h1>
+          <p>First generation of Fitbit Versa brand with fitness tracker, built in GPS and heart rate tracker</p>
           <p class="price">CAD $399.99</p>
           <p><button>Add to Cart</button></p>
         </div>
@@ -105,10 +112,10 @@
         <div class="shop" id="fit4">
           <img src="images/fitbit_surge.png" alt="Fitbit watch" style="width: 100%;" />
           <h1>Fitbit Surge - For Ladies</h1>
+          <p>The first generation of Fitbit surge with optical heart rate sensor and all day fitness tracking</p>
           <p class="price">CAD $499.99</p>
           <p><button>Add to Cart</button></p>
         </div>
-      </div>
 
       <div class="brand left" id="model">
         <div class="middle">
